[gd_scene load_steps=35 format=3 uid="uid://dqerh14gwh3g4"]

[ext_resource type="PackedScene" uid="uid://bqalbxqvp523a" path="res://scene/bases/enemy_base/enemy_base.tscn" id="1_dcpc5"]
[ext_resource type="Script" uid="uid://cb8j5rixmdlcu" path="res://scene/enemies/bosses/boss7/boss_7.gd" id="2_bmben"]
[ext_resource type="PackedScene" uid="uid://dgg22eppriaxg" path="res://scene/enemies/freeze/ice/ice.tscn" id="3_8uxrt"]
[ext_resource type="PackedScene" uid="uid://dtio7stox0bae" path="res://scene/player_scenes/coins/coin_silver/coin_silver.tscn" id="4_gs6tf"]
[ext_resource type="Texture2D" uid="uid://byy540imrsg51" path="res://aaasets/death_big/death1.png" id="5_khyqr"]
[ext_resource type="Texture2D" uid="uid://bfh1lqqa6t6c4" path="res://aaasets/death_big/death2.png" id="6_4exl4"]
[ext_resource type="Texture2D" uid="uid://brvdeersu0aud" path="res://aaasets/death_big/death3.png" id="7_nltch"]
[ext_resource type="Texture2D" uid="uid://jninaaa04w40" path="res://aaasets/death_big/death4.png" id="8_bsy2j"]
[ext_resource type="Texture2D" uid="uid://ctglb80f6ivlp" path="res://aaasets/death_big/death5.png" id="9_hrkh2"]
[ext_resource type="Texture2D" uid="uid://bl1l0rxf7pps0" path="res://aaasets/death_big/death6.png" id="10_6o3p7"]
[ext_resource type="Texture2D" uid="uid://c6h3wti8oydwf" path="res://aaasets/death_big/death7.png" id="11_cvdfi"]
[ext_resource type="Texture2D" uid="uid://ducqxnx8pp8bg" path="res://aaasets/death_big/death8.png" id="12_s0w0s"]
[ext_resource type="Texture2D" uid="uid://ckt55u11ncgdc" path="res://aaasets/death_big/death9.png" id="13_335d4"]
[ext_resource type="Texture2D" uid="uid://cg5ivhs321h21" path="res://aaasets/death_big/death10.png" id="14_amc56"]
[ext_resource type="Texture2D" uid="uid://gygsx68cgi2e" path="res://aaasets/death_big/death11.png" id="15_uho1w"]
[ext_resource type="Texture2D" uid="uid://dbkpoyam4wnlk" path="res://aaasets/death_big/death12.png" id="16_3tety"]
[ext_resource type="Texture2D" uid="uid://d17e5667isqli" path="res://aaasets/enemies/bosses/boss7/boss8_fly1.png" id="16_wa30u"]
[ext_resource type="Texture2D" uid="uid://bmkkvcevc4wfe" path="res://aaasets/enemies/bosses/boss7/boss8_fly2.png" id="17_b71i8"]
[ext_resource type="Texture2D" uid="uid://b3rl3l2n4as2n" path="res://aaasets/death_big/death13.png" id="17_n4331"]
[ext_resource type="Texture2D" uid="uid://bff0nn7hlfjjw" path="res://aaasets/enemies/bosses/boss7/boss8_fly3.png" id="18_8apl7"]
[ext_resource type="Texture2D" uid="uid://cb0ugtfdmd43x" path="res://aaasets/death_big/death14.png" id="18_j5qqf"]
[ext_resource type="Texture2D" uid="uid://tf3cubow1y1u" path="res://aaasets/enemies/bosses/boss7/boss8_fly4.png" id="19_bb1bd"]
[ext_resource type="Texture2D" uid="uid://c51sun3htm0ax" path="res://aaasets/death_big/death15.png" id="19_gqaig"]
[ext_resource type="Texture2D" uid="uid://fj5t6yhheivd" path="res://aaasets/enemies/bosses/boss7/boss8_fly5.png" id="20_63xlm"]
[ext_resource type="Texture2D" uid="uid://cd0sprwutngv6" path="res://aaasets/death_big/death16.png" id="20_udjel"]
[ext_resource type="Texture2D" uid="uid://bbooeqibq5qfw" path="res://aaasets/death_big/death17.png" id="21_gwpeo"]
[ext_resource type="Texture2D" uid="uid://dnr5binjbsef7" path="res://aaasets/death_big/death18.png" id="22_fanj4"]
[ext_resource type="Texture2D" uid="uid://dj0raxmxphrdy" path="res://aaasets/death_big/death19.png" id="23_1gbnt"]
[ext_resource type="PackedScene" uid="uid://d31qoo0gjig68" path="res://scene/enemies/bosses/boss7/tail.tscn" id="23_gs6tf"]
[ext_resource type="Texture2D" uid="uid://cbhlyr3fpjerc" path="res://aaasets/death_big/death20.png" id="24_qavof"]
[ext_resource type="Texture2D" uid="uid://b8s5ig5sxluau" path="res://aaasets/death_big/death21.png" id="25_ded7j"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v4gpw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_khyqr")
}, {
"duration": 1.0,
"texture": ExtResource("6_4exl4")
}, {
"duration": 1.0,
"texture": ExtResource("7_nltch")
}, {
"duration": 1.0,
"texture": ExtResource("8_bsy2j")
}, {
"duration": 1.0,
"texture": ExtResource("9_hrkh2")
}, {
"duration": 1.0,
"texture": ExtResource("10_6o3p7")
}, {
"duration": 1.0,
"texture": ExtResource("11_cvdfi")
}, {
"duration": 1.0,
"texture": ExtResource("12_s0w0s")
}, {
"duration": 1.0,
"texture": ExtResource("13_335d4")
}, {
"duration": 1.0,
"texture": ExtResource("14_amc56")
}, {
"duration": 1.0,
"texture": ExtResource("15_uho1w")
}, {
"duration": 1.0,
"texture": ExtResource("16_3tety")
}, {
"duration": 1.0,
"texture": ExtResource("17_n4331")
}, {
"duration": 1.0,
"texture": ExtResource("18_j5qqf")
}, {
"duration": 1.0,
"texture": ExtResource("19_gqaig")
}, {
"duration": 1.0,
"texture": ExtResource("20_udjel")
}, {
"duration": 1.0,
"texture": ExtResource("21_gwpeo")
}, {
"duration": 1.0,
"texture": ExtResource("22_fanj4")
}, {
"duration": 1.0,
"texture": ExtResource("23_1gbnt")
}, {
"duration": 1.0,
"texture": ExtResource("24_qavof")
}, {
"duration": 1.0,
"texture": ExtResource("25_ded7j")
}],
"loop": true,
"name": &"death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_wa30u")
}, {
"duration": 1.0,
"texture": ExtResource("17_b71i8")
}, {
"duration": 1.0,
"texture": ExtResource("18_8apl7")
}, {
"duration": 1.0,
"texture": ExtResource("19_bb1bd")
}, {
"duration": 1.0,
"texture": ExtResource("20_63xlm")
}],
"loop": true,
"name": &"fly",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qv1hu"]
radius = 26.0
height = 388.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s2d1s"]
radius = 91.0
height = 316.0

[node name="Boss7" groups=["bosses", "freezing_enemies"] instance=ExtResource("1_dcpc5")]
script = ExtResource("2_bmben")
ice_scene = ExtResource("3_8uxrt")
coin_scene = ExtResource("4_gs6tf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="2"]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_v4gpw")
animation = &"fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]
shape = SubResource("CapsuleShape2D_qv1hu")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="4"]
position = Vector2(0, -89)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_s2d1s")

[node name="Shot" type="Timer" parent="." index="5"]
wait_time = 2.5
autostart = true

[node name="Tail" parent="." index="6" instance=ExtResource("23_gs6tf")]
position = Vector2(56, -232)

[node name="TailShot" type="Timer" parent="." index="7"]
wait_time = 3.0
autostart = true

[node name="UseSheald" type="Timer" parent="." index="8"]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="tail_sheald" from="." to="Tail" method="_on_boss_8_tail_sheald"]
[connection signal="tail_shot" from="." to="Tail" method="_on_boss_8_tail_shot"]
[connection signal="timeout" from="Shot" to="." method="_on_shot_timeout"]
[connection signal="timeout" from="TailShot" to="." method="_on_tail_shot_timeout"]
[connection signal="timeout" from="UseSheald" to="." method="_on_use_sheald_timeout"]
